fixed font spacing issue

--- a/css/index.css
+++ b/css/index.css
@@ -830,13 +830,14 @@ body {
   margin: 0.2133rem 0;
 }
 .product-info .product-info-mobile .goods-name .product-name {
-  font-size: 12px;
+  font-size: 11px;
   margin-bottom: 5px;
+  max-width: 70%;
 }
 .product-info .product-info-mobile .goods-name .ratings {
   display: flex;
   align-items: center;
-  font-size: 12px;
+  font-size: 11px;
   width: 90px;
 }
 .product-info .product-info-mobile .goods-name .ratings img {
